wip - implemented user handler logic updated api spec to include specific status code for unsuccessful http responses
